<resources>
    <string name="app_name">Libuk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <!-- Preference Titles -->
    <string name="messages_header">Mensajes</string>
    <string name="sync_header">Sinc</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Tu firma</string>
    <string name="reply_title">Accion de respuesta predefinida</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sinc email periodicamente</string>
    <string name="attachment_title">Descargar los ingresos adjuntos</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="usuarioInicio">Usuario</string>
    <string name="contrasenaInicio">Contraseña:</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrotextoescrito1">Escriba el usuario deseado:</string>
    <string name="registrotextoescrito2">Escriba a continuación la contraseña deseada::</string>
    <string name="registrotextoescrito3">Repita la contraseña, por favor:</string>
    <string name="leido">leído</string>
    <string name="leyendo">leyendo</string>
    <string name="anadirlib">añadir libro</string>
    <string name="volver">volver</string>
    <string name="toastregpos">Registro realizado correctamente</string>
    <string name="toastregneg">Contraseñas no coinciden</string>
    <string name="usar">Usar</string>
    <string name="conf">Configuración</string>
    <string name="bvenida">Te damos la bienvenida</string>
    <string name="aplicar">Aplicar</string>
    <string name="titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="numpag">Número de páginas</string>
    <string name="gene">Genero del libro</string>
    <string name="anlib">Añadir el libro</string>
    <string name="finalizar">Finalizar</string>
    <string name="cambiar">Cambiar</string>
    <string name="cambgen">Cambiar el género del libro</string>
    <string name="acontbotfin">A continuación se encuentra el botón finalizar.</string>
    <string name="alpulelim">Al pulsarlo se eliminará el libro de la lista</string>
    <string name="leyelistfin">leyendo y pasará a la lista de los ya finalizados.</string>
    <string name="bienv">Te damos la bienvenida </string>
    <string name="salida">¿Seguro que deseas salir de la aplicacion?</string>
    <string name="salidapan">¿Seguro que deseas salir de esta pantalla?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="errorsesion">Error en el inicio de sesión</string>
    <string name="errorreg">Error en el registro</string>
    <string name="correg">Registro correcto</string>
    <string name="menscorreg">Se ha registrado el usuario correctamente</string>
    <string name="salirConf">¿Seguro que deseas salir de la configuración? Se guardaran los cambios realizados.</string>
    <string name="BDe">Problema BD</string>
    <string name="BDMe">Problema en la creación de la BD. Prueba con una fecha válida.</string>
    <string name="addcor">Adición correcta</string>
    <string name="addlibmen">Se ha añadido el libro correctamente</string>
    <string name="anlibdiag">¿Seguro que deseas añadir el libro?</string>
    <string name="psop">Por supuesto</string>
    <string name="can">Cancelar</string>
    <string name="saliranlib">¿Seguro que deseas salir de esta pantalla? Si lo haces no se registrará el libro</string>
    <string name="modoscdef">Se cambia el modo a oscuro cuando está activado y normal cuando está desactivado.</string>
    <string name="modosc">Modo Oscuro</string>
    <string name="temint">Tema de la interfaz</string>
    <string name="datdeflib">Datos con los que definir los libros</string>
    <string name="genlib">Genero del libro</string>
    <string name="podgenlib">Marca esta casilla si deseas poder escribir el genero del libro. Por ejemplo si es un drama o una novela romántica</string>
    <string name="idiom">idiomas</string>
    <string name="idimaplic">Idioma de la aplicación</string>
    <string name="listidiom">Lista de los idiomas disponibles en la aplicación.</string>
    <string name="lisidomas">Lista Idiomas</string>
    <string name="camb">Cambiar</string>
    <string name="reglib">Registro libro</string>
    <string name="nopodregistrar">No se ha podido registrar el libro correctamente debido a que no se han definido las páginas o es un número no válido.</string>
    <string name="salirleyendo">"¿Seguro que deseas salir de la lista de libros que se están leyendo?"</string>
    <string name="valorno">Valor no válido</string>
    <string name="fin">Fin libro</string>
    <string name="felfin">Felicidades por la finalización del libro</string>
    <string name="buslib">Buscar libreria</string>
    <string name="errorLocali">Error en la localizacion del usuario</string>
    <string name="libcerc">Libreria mas cercana</string>
    <string name="contract">Contraseña actualizada</string>
    <string name="contractcontenido">La contraseña se ha actualizado correctamente</string>
    <string name="error">Error</string>
    <string name="appwidget_text">Localización</string>
    <string name="add_widget">Añadir widget</string>
    <string name="app_widget_description">Se mostrará la calle en la que te encuentras actualmente.</string>
    <string name="listaEventos">Listar Eventos</string>
    <string name="nulo">Ninguno</string>
    <string name="finlec">Programar fin lectura</string>
    <string name="defh30">En media hora</string>
    <string name="defh3">En tres hora</string>
    <string name="defh">En una hora</string>
    <string name="defh2">En dos hora</string>
    <string name="hdefinida">La hora definida es:</string>
    <string name="fhlec">Fin del tiempo indicado de lectura</string>
    <string name="nAutRec">Nuevo autor a recomendar</string>
    <string name="nAutRecB">Añadir</string>
    <string name="autorrecomendarw">Autor</string>
    <string name="recomendacion">Recomendado: </string>
    <string name="citlit">Ciudades de la literatura</string>
    <string name="comerror">Comunicar error</string>
    <string name="escrerror">Escriba su problema</string>
    <string name="mascercanos">Marcador más cercano</string>
    <string name="vermarc"> Ver librerias guardadas</string>
    <string name="errbd">Error base de datos</string>
    <string name="sinmarcas">Sin marcadores</string>
    <string name="mapamislibrerias">Librería</string>
    <string name="env">Enviar</string>
    <string name="luginteres">Lugares de interés</string>
    <string name="desde">desde</string>
    <string name="habilmens">Habilitar/ Deshabilitar mensajes</string>
    <string name="enviado">Enviado</string>
    <string name="escribe">Explica el error lo mas conciso posible por favor.</string>
</resources>